# negentropy

./: .dockerignore  .env.docker  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  README.md  dev  docker-compose.local.yml  docker-compose.wiki.yml  docker-compose.yml  package.json  patrol-candidate.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/negentropy/: .env.example  alembic.ini  main.py  pyproject.toml
apps/negentropy-cognizes/: .env.example  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
apps/negentropy-cognizes/src/cognizes/agents/: utils.py
apps/negentropy-cognizes/src/cognizes/api/: main.py
apps/negentropy-cognizes/src/cognizes/core/: __init__.py  database.py
apps/negentropy-cognizes/tests/agents/: run_tests.py
apps/negentropy-cognizes/tests/agents/unit/: test_final_coverage.py  test_simple_coverage.py  test_simple_method_calls.py
apps/negentropy-cognizes/tests/integration/mind/: test_adk_llmagent.py  test_e2e.py
apps/negentropy-cognizes/tests/performance/mind/: locustfile.py  run_benchmark.sh
apps/negentropy-cognizes/tests/performance/perception/: rrf_benchmark.py
apps/negentropy-cognizes/tests/ui/__mocks__/: server.ts
apps/negentropy-cognizes/tests/ui/e2e/: tsconfig.json
apps/negentropy-cognizes/tests/ui/fixtures/: papers.json  users.json
apps/negentropy-cognizes/tests/ui/helpers/: test-utils.tsx
apps/negentropy-cognizes/tests/unittests/core/: test_database.py
apps/negentropy/scripts/: _db.py  backfill_blob_objects.py  backfill_memory_embeddings.py  cleanup_orphan_chunks.py  export_wiki_content.py  find_dup_arxiv_ids.py  force_reset_db.py  init_test_db.py
apps/negentropy/src/: _negentropy_silence.pth  services.py
apps/negentropy/src/negentropy/: __init__.py  _silence_upstream_warnings.py  agent.py  cli.py  cli_backfill_titles.py  cli_doctor.py  cli_seed.py  config.py  instrumentation.py  logging.py  main.py  model_names.py  serialization.py  services.py
apps/negentropy/src/negentropy/agents/: __init__.py  _citation_protocol.py  _dynamic_instruction.py  _dynamic_model.py  _model.py  action.py  agent.py  approval.py  contemplation.py  next_action.py  perception.py  schemas.py  skill_scheduler.py  skills_injector.py  state.py  state_manager.py
apps/negentropy/src/negentropy/auth/: api.py  deps.py  middleware.py  rbac.py  service.py  tokens.py
apps/negentropy/src/negentropy/config/: __init__.py  _base.py  app.py  auth.py  config.default.yaml  config.local.example.yaml  database.py  environment.py  knowledge.py  llm.py  logging.py  memory.py  model_resolver.py  observability.py  openai.py  routine.py  search.py  services.py  task_registry.py  yaml_loader.py
apps/negentropy/src/negentropy/db/: __init__.py  deps.py  session.py
apps/negentropy/src/negentropy/engine/: __init__.py  api.py  artifacts_factory.py  bootstrap.py  lifecycle.py  memory_factory.py  runner_factory.py  session_factory.py  sessions_api.py  summarization.py  title_inspector.py
apps/negentropy/src/negentropy/interface/: __init__.py  agent_presets.py  api.py  execution.py  mcp_client.py  mcp_config_resolver.py  models_api.py  permissions.py  repository_api.py  routine_api.py  scheduler_api.py  subagent_presets.py  task_models_api.py  tool_resolver.py
apps/negentropy/src/negentropy/knowledge/: __init__.py  _http_range.py  _shared.py  api.py  api_helpers.py  cancellation.py  catalog_assignment_dao.py  catalog_dao.py  catalog_node_dao.py  catalog_service.py  chunking.py  cleanup.py  constants.py  content.py  corpus_engine.py  dao.py  embedding.py  exceptions.py  extraction.py  governance.py  graph.py  graph_algorithms.py  graph_repository.py  graph_service.py  kg_entity_service.py  lifecycle_schemas.py  lifecycle_types.py  llm_extractors.py  mcp_server.py  pipeline_tracker.py  repository.py  reranking.py  retrieval.py  revalidate.py  schemas.py  service.py  slug.py  source_dao.py  source_tracking.py  summarization.py  (+4 more)
apps/negentropy/src/negentropy/llm/: __init__.py
apps/negentropy/src/negentropy/logging/: __init__.py  core.py  formatters.py  interceptors.py  io.py  sinks.py
apps/negentropy/src/negentropy/models/: __init__.py  action.py  agent.py  base.py  builtin_tool.py  internalization.py  knowledge_runtime.py  mcp.py  mcp_runtime.py  mind.py  model_config.py  observability.py  perception.py  plugin.py  plugin_common.py  pulse.py  repository.py  routine.py  scheduled_task.py  security.py  skill.py  state.py  storage.py  sub_agent.py  task_model_setting.py  vendor_config.py
apps/negentropy/src/negentropy/plugins/: __init__.py  api.py  execution.py  mcp_client.py  permissions.py  subagent_presets.py
apps/negentropy/src/negentropy/scripts/: __init__.py  cleanup_orphan_knowledge.py
apps/negentropy/src/negentropy/services/: __init__.py  memory_factory.py
apps/negentropy/src/negentropy/storage/: __init__.py  exceptions.py  gcs_client.py  postgres_client.py  protocol.py  service.py  uri.py
apps/negentropy/tests/: conftest.py
apps/negentropy/tests/eval_tests/memory/: eval_runner.py  test_eval_runner.py
apps/negentropy/tests/integration_tests/: test_seed_demo.py
apps/negentropy/tests/integration_tests/db/: test_consolidation_jobs.py  test_db_connection.py  test_migrations.py
apps/negentropy/tests/integration_tests/engine/: test_pii_writepath.py  test_ppr_fusion.py  test_reflection_e2e.py  test_rocchio_apply.py  test_routine_event_persistence.py  test_routine_orchestrator.py  test_runner_artifacts.py  test_scheduler_registry.py  test_session_hard_delete.py  test_session_title.py  test_title_inspector.py
apps/negentropy/tests/integration_tests/interface/: test_get_visible_plugin_ids.py  test_repository_api.py  test_routine_api.py  test_task_model_settings_db.py
apps/negentropy/tests/integration_tests/knowledge/: test_catalog_cross_corpus.py  test_catalog_dao_integration.py  test_corpus_chunk_count_filter.py  test_finalize_stale_kg_build_runs_integration.py  test_kg_entity_service_integration.py  (+5 more)
apps/negentropy/tests/unit_tests/: test_instrumentation.py  test_model_names.py  test_serialization.py
(+2423 files in other folders)
