[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/negentropy"]

[tool.hatch.build.targets.wheel.force-include]
# 将 .pth 文件安装到 site-packages 根目录, 触发解释器 site 初始化期的早期 hook 加载
# 用于在 ADK CLI 加载第三方依赖前抑制两类已知上游噪声 (authlib.jose / PLUGGABLE_AUTH)
"src/_negentropy_silence.pth" = "_negentropy_silence.pth"

[project]
name = "negentropy"
version = "0.1.0"
description = "An entropy-reducing 'cultivation' system for AI agents."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Database Drivers & ORM
    "asyncpg>=0.31.0",              # High-performance async PostgreSQL driver
    "psycopg[binary]>=3.2.0",       # Synchronous PostgreSQL driver (for OTel)
    "sqlalchemy[asyncio]>=2.0.46",  # SQL Toolkit and ORM
    "alembic>=1.18.3",              # Database migration tool
    
    # Core Infrastructure
    "google-adk>=1.28.1",           # GHSA-rg7c-g689-fr3x: code injection + missing auth on adk web/api_server eval endpoints
    "opentelemetry-instrumentation-google-genai>=0.6b0,<1.0.0",  # ADK GenAI SDK OTel 自动埋点 (消除 adk_web_server 启动期 WARNING)
    "microsandbox>=0.1.8",          # Isolated execution environment for tool usage
    "mcp>=1.6.0",                   # Model Context Protocol SDK for MCP Server integration
    "pydantic-settings[yaml]>=2.12.0",  # Configuration management with YAML support
    "pyyaml>=6.0.2",                # YAML parser for configuration files
    
    # LLM & AI Services
    "litellm>=1.83.7",              # Unified interface for various LLM providers (>=1.83.7 修复 SQLi/SSTI/MCP-RCE，对应 GHSA-9566-... / 90 / 88 / 89)
    
    # Google Cloud Services
    "google-cloud-storage>=3.8.0",  # Object storage for artifacts
    "google-auth>=2.48.0",          # Authentication for Google services
    "google-cloud-logging>=3.13.0", # Cloud Logging integration
    "httpx>=0.27.0",                # Async HTTP client for OAuth
    
    # Utilities
    "structlog>=25.5.0",            # Structured logging for machine-readability
    "orjson>=3.11.6",               # Fast JSON serialization
    "beautifulsoup4>=4.12.3",       # HTML parsing
    "networkx>=3.0",                # Graph algorithms (PageRank, Louvain community detection)
]

[project.scripts]
negentropy = "negentropy.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",           # Testing framework (CVE-2025-71176: tmpdir handling)
    "pytest-asyncio>=1.3.0",   # Asyncio support for pytest
    "pytest-cov>=6.0.0",       # Coverage plugin for pytest
    "ruff>=0.14.14",           # Fast Python linter and formatter
]

[tool.ruff]
# Set line length to 120 chars to accommodate modern display widths
line-length = 120
# Target Python 3.13+ features
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors: Ensures adherence to PEP 8 style guide
    "F",   # pyflakes: Detects logical errors like unused imports/variables
    "I",   # isort: Sorts imports for cleaner file headers
    "B",   # flake8-bugbear: Catches common bugs and design problems
    "UP",  # pyupgrade: Upgrades syntax to newer Python versions automatically
]
ignore = [
    "B008",  # Depends()/Query()/File() in function defaults — standard FastAPI pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# Automatically treat async def functions as async tests (no manual @pytest.mark.asyncio needed)
asyncio_mode = "auto"
# Set event loop fixture scope to function to match db_engine fixture scope
asyncio_default_fixture_loop_scope = "function"
# Add src to pythonpath so tests can import the package directly without installation
pythonpath = ["src"]
# Restrict test discovery to the tests directory to avoid picking up scripts or other files
testpaths = ["tests"]
# -v: Verbose output
# --strict-markers: Error on undefined markers to prevent typos
# --cov: Enable coverage reporting for negentropy package
# --cov-report=term-missing: Show missing lines in terminal output
# --cov-report=html: Generate HTML coverage report
addopts = "-v --strict-markers --cov=negentropy --cov-report=term-missing --cov-report=html"
# Ignore specific warnings
filterwarnings = [
    # Upstream warning from google-genai incompatible with Python 3.14
    # See: https://github.com/googleapis/python-genai/issues/???
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv]
override-dependencies = [
    "aiohttp>=3.13.4",      # CVE-2025/2026 (19 个): microsandbox==0.1.8 锁死 <3.11.0, 强制覆盖升级
]
constraint-dependencies = [
    # ── 既有约束 ──
    "authlib>=1.6.11",      # GHSA-jj8c-mmj3-mmgv: OAuth client cache CSRF (+ 保留历史 CVE-2026-27962 等防御)
    "pyasn1>=0.6.3",        # CVE-2026-30922: unbounded recursion DoS
    "pyjwt>=2.12.0",        # CVE-2026-32597: unknown crit header extensions
    "cryptography>=46.0.7", # CVE-2026: buffer overflow, subgroup attack, DNS constraint
    "pygments>=2.20.0",     # CVE-2026-4539: ReDoS via GUID regex
    "requests>=2.33.0",     # CVE-2026-25645: insecure temp file reuse
    # ── 新增约束 (上游传递依赖防御性声明) ──
    "pillow>=12.2.0",       # FITS GZIP decompression bomb + OOB write (high)
    "pypdf>=6.10.0",        # 14 个 DoS/RAM 耗尽漏洞 (medium)
    "transformers>=4.53.0", # ReDoS + Trainer 任意代码执行 (medium)
    "tornado>=6.5.5",       # cookie injection + DoS multipart (high)
    "ujson>=5.12.0",        # integer overflow buffer overflow + memory leak (high)
    "fickling>=0.1.10",     # 11 个 pickle 安全检查绕过 (high)
    "nltk>=3.9.4",          # Zip Slip + XSS (critical/medium, 另有 3 个无补丁)
    "ecdsa>=0.19.2",        # DER 长度验证 DoS (medium, 另 #195 无补丁)
    "h2>=4.3.0",            # HTTP Request Smuggling (medium)
    "marshmallow>=3.26.2",  # Schema.load DoS (medium)
    "markdown>=3.8.1",      # Uncaught Exception (medium)
    "werkzeug>=3.1.6",      # Windows 特殊设备名路径穿越 (medium)
    "flask>=3.1.3",         # session Vary: Cookie 缺失 (low)
    "markdownify>=0.14.1",  # 大 headline 内存消耗 (low)
    "unstructured>=0.18.18",# MSG 附件路径穿越任意文件写入 (critical)
    "brotli>=1.2.0",        # decompression DoS (high)
    "azure-core>=1.38.0",   # 不可信数据反序列化 (high)
    "aiomysql>=0.3.0",      # 恶意 MySQL 服务器客户端文件访问 (high)
    "pyopenssl>=26.0.0",    # DTLS cookie callback 缓冲区溢出 (high)
    "starlette>=0.50.0",    # O(n²) Range header DoS + multipart DoS (high)
    "protobuf>=5.29.6",     # JSON recursion depth bypass (high)
    "urllib3>=2.6.3",       # 解压缩炸弹 + 无限链解压缩 (high)
    "filelock>=3.20.3",     # TOCTOU symlink 竞争 (medium)
    "orjson>=3.11.6",       # 无限递归 DoS (high)
    "google-cloud-aiplatform>=1.133.0", # 可预测 bucket 命名 (high)
    "mako>=1.3.11",         # GHSA-v92g-xgxw-vvmm: TemplateLookup 双斜杠路径穿越 (medium, alembic 传递)
    "python-multipart>=0.0.26", # GHSA-mj87-hwqh-73pj: 大型 preamble/epilogue DoS (medium, starlette 传递)
]
